--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: http://bigota.d.miui.com/9.9.3/miui_MI6_9.9.3_c36a83d27e_9.0.zip
-  ROM_NAME: Generic
+  ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
 jobs:
